# extend_scout_ros

scout_base/: CMakeLists.txt
scout_description/urdf/: scout_mini.urdf.xacro  scout_mini_macro.xacro  scout_mini_wheel.xacro
scout_mini_moveit_config/: CMakeLists.txt  package.xml
scout_mini_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  scout_mini.srdf.xacro
